--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -292,7 +292,12 @@ main {
 	@apply inline-block no-underline px-6 md:px-10 py-2.5 md:py-[13px] text-sm md:text-[18px] leading-normal font-normal uppercase text-[#FFFFFF] bg-[#A66C23] border border-solid border-[#A66C23] rounded-md transition-all duration-300;
 }
 /*=========== Footer CSS ============*/
-
+.footer-item a {
+	@apply text-[#4B4E53] opacity-70;
+}
+.footer-desc p {
+	@apply opacity-70;
+}
 
 /*=========== Review sliders CSS ============*/
 .review-arrows {
